# analytics-cloud

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml  pipeline.yml
dbt/analytics_dbt/: dbt_project.yml  profiles.yml.example
dbt/analytics_dbt/models/: fcr_ticket.sql  mart_ticket_metrics.sql  mart_ticket_metrics.yml  sla_first_response.sql  sources.yml  stg_base_tickets.sql  stg_base_tickets_typed.sql  stg_hello.sql
orchestration/gha/: run_all.sh
src/analytics_cloud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/analytics_cloud/dashboard/: export.py  load_postgres.py
src/analytics_cloud/ingest/: load_to_duckdb.py  read_sheet.py
src/analytics_cloud/sla/: compute.py  notify.py
